# InsuranceCopilotAI

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: azure-static-web-apps-thankful-glacier-0257ee10f.yml
backend/: .env.example  Dockerfile  README_RAG.md  main.py  pyproject.toml  run.py  test_chat.py
backend/scripts/: check_models.py  debug_sparse_score.py  ingest.py  inspect_collection.py  reset_collection.py  search_cli.py  search_sparse_cli.py  seed_rates.py  test_bm42.py  test_flashrank.py  test_multibert.py  test_rag.py  validate_metadata.py  verify_ingest_change.py
backend/src/: main.py
backend/src/api/: deps.py
backend/src/api/endpoints/: auth.py  chat.py  files.py  ingest.py  quote.py  router.py
backend/src/core/: config.py  database.py  security.py
backend/src/domain/: models.py  schemas.py
backend/src/services/: agent_service.py  auth_service.py  chat_service.py  ingestion_service.py  pdf_service.py  quote_service.py  rag_service.py  semantic_router.py
frontend/insurance-copilot/: Dockerfile  README.md  angular.json  package-lock.json  package.json  staticwebapp.config.json  tsconfig.json
frontend/insurance-copilot/src/: index.html  main.ts  styles.css
frontend/insurance-copilot/src/app/: app..ts  app.config.ts  app.ts
frontend/insurance-copilot/src/app/services/: auth.service.ts  chat.service.ts  (+1 more)
frontend/insurance-copilot/src/environments/: environment.prod.ts
scripts/: seed_rates.py
src/: main.py
src/api/endpoints/: chat.py
src/core/: config.py
src/services/: quote_service.py  rag_service.py
(+13 files in other folders)
